<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:fillViewport="true"
    tools:context=".fragments.add.AddFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- NSU ID INPUT-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nsu_id"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nsu_id"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/selected_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="number"
                android:maxLength="7"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:typeface="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Student name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/student_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/student_name"
            android:orientation="vertical"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nsu_id">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="textPersonName"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:typeface="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- School list-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/school_list_dropdown"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/select_academic_school"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/student_name">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Department list-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/department_list_dropdown"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/department_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/school_list_dropdown">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                tools:ignore="LabelFor" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Date of birth text field-->
        <com.google.android.material.textview.MaterialTextView
            android:id="@id/selected_date"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="300dp"
            android:layout_height="52dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:hint="@string/date_of_birth"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
            android:typeface="normal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/department_list_dropdown" />

        <!-- date picker button -->

        <!-- Phone number-->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/datePicker_button"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:insetLeft="0dp"
            android:insetTop="0dp"
            android:insetRight="0dp"
            android:insetBottom="0dp"
            app:icon="@drawable/ic_outline_calendar_today_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintBottom_toBottomOf="@+id/selected_date"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/selected_date"
            app:layout_constraintTop_toTopOf="@+id/selected_date"
            app:layout_constraintVertical_bias="1.0" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/phone_number"
            android:orientation="vertical"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/selected_date">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="phone"
                android:maxLength="11"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:typeface="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- NID number-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nid_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/nid_number"
            android:orientation="vertical"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/phone_number">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="number"
                android:maxLength="10"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:typeface="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Present Address-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/present_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/present_address"
            android:orientation="vertical"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nid_number">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="textPostalAddress"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:typeface="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Permanent Address-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/permanent_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:hint="@string/permanent_address"
            android:orientation="vertical"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/present_address">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:inputType="textPostalAddress"
                android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Subtitle1"
                android:typeface="normal" />

        </com.google.android.material.textfield.TextInputLayout>

        <!-- Submit button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/submit_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/submit"
            android:textAppearance="@style/TextAppearance.MdcTypographyStyles.Button"
            android:typeface="normal"
            app:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/permanent_address" />


        <!--Constraint layout finish-->
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>